test/bad/classes/destructor01.px

class A def
    destructor(Int x) def
        skip
